
syntax = "proto3";
option csharp_namespace = "ActorPlayground.Remote";

message Pid {
  string Address = 1;
  string Id = 2;
}

message MessageBatch {
  repeated MessageEnvelope envelopes = 1;
}

message MessageEnvelope {
  string message_type = 1;
  bytes message_data = 2;
  string command_id = 3
  Pid sender = 4;
}

message Unit {}

service Transport {
  rpc Send (MessageEnvelope) returns (Unit) {}
}
